# CodingMindset-YouTube

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
MoA/: README.md  moa.py  template.env
codestral-mamba/: README.md  codestral.py  pyproject.toml
fine-tuning-flux/: Flux_LoRA_Fine_tuning.ipynb  README.md
fine-tuning-llama3.1/: CodingMindset_Fine_Tuning_con_Unsloth.ipynb  README.md  codingmindset_fine_tuning_con_unsloth.py
llama-agents-intro/: README.md  llama_agents_ms.py  pyproject.toml
