[tool.poetry]
name = "codingmindset-youtube-moa"
version = "0.1.0"
description = ""
authors = ["Elvin Gomez <elvin@codingmindset.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
together = "^1.2.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
